--- a/css/aula 2/index.html
+++ b/css/aula 2/index.html
@@ -10,11 +10,12 @@
 <body>
     <div class="wrapper">
         <div class="checkbox-wrapper">
-            <input type="checkbox" id="toogle" />
-            <label class="checkbox" for="toogle"></label>
-            <div class="trace"></div>
-            <div class="trace"></div>
-            <div class="trace"></div>
+            <input type="checkbox" id="toggle" />
+            <label class="checkbox" for="toggle">
+                <div class="trace"></div>
+                <div class="trace"></div>
+                <div class="trace"></div>
+            </label>
         </div>
     </div>
 </body>
